--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,18 @@
 <resources>
     <string name="app_name">E-Learing Management System</string>
+    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="nav_header_title">Android Studio</string>
+    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_desc">Navigation header</string>
+    <string name="action_settings">Settings</string>
+
+    <string name="menu_dashboard">Dashboard</string>
+    <string name="menu_coursemanager">Course Manager</string>
+    <string name="menu_salesreport">Sales Report</string>
+    <string name="menu_payoutreport">Payout Report</string>
+    <string name="menu_payoutsettings">Payout Settings</string>
+    <string name="menu_message">Message</string>
+    <string name="menu_manageprofile">Manage Profile</string>
 </resources>
