--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,12 @@
     <string name="menu_payoutsettings">Payout Settings</string>
     <string name="menu_message">Message</string>
     <string name="menu_manageprofile">Manage Profile</string>
+    <string name="rbtn_student">Student</string>
+    <string name="rbtn_instructor">Instructor</string>
+    <string name="title_activity_student_navigation_drawer">StudentNavigationDrawer</string>
+
+    <string name="menu_home">Home</string>
+    <string name="menu_gallery">Gallery</string>
+    <string name="menu_slideshow">Slideshow</string>
+    <string name="title_activity_navigation_drawer_student">StudentNavigationDrawer</string>
 </resources>
