--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,10 +17,16 @@
     <string name="menu_manageprofile">Manage Profile</string>
     <string name="rbtn_student">Student</string>
     <string name="rbtn_instructor">Instructor</string>
-    <string name="title_activity_student_navigation_drawer">StudentNavigationDrawer</string>
 
     <string name="menu_home">Home</string>
-    <string name="menu_gallery">Gallery</string>
-    <string name="menu_slideshow">Slideshow</string>
-    <string name="title_activity_navigation_drawer_student">StudentNavigationDrawer</string>
+    <string name="menu_account">Account</string>
+    <string name="menu_calender">Calender</string>
+    <string name="menu_chat">Chat</string>
+    <string name="menu_logout">LogOut</string>
+
+
+    <string name="home_text">Home</string>
+    <string name="account_text">My Account</string>
+    <string name="calendet_text">Calender</string>
+    <string name="chat_text">Chat</string>
 </resources>
