--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,17 @@
     <string name="account_text">My Account</string>
     <string name="calendet_text">Calender</string>
     <string name="chat_text">Chat</string>
+    <string name="textlogin">Login</string>
+    <string name="hintpassword">Password</string>
+    <string name="hintemail">Email</string>
+    <string name="textforgotpassword">Forgot Password?</string>
+    <string name="btnlogin">Login</string>
+    <string name="textviewnewac">Create New Account?</string>
+    <string name="textviewor">OR</string>
+    <string name="textviewRegister">Register</string>
+    <string name="textviewalreadyhaveac">Already have an Account?</string>
+    <string name="btnregister">Register</string>
+    <string name="edittextconfirmpassword">Confirm Password</string>
+    <string name="edittxtfirstname">First Name</string>
+    <string name="edittxtflastname">Last Name</string>
 </resources>
