--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">E-Learing Management System</string>
+    <string name="Welcome_message">Welcome to Amigos Learning</string>
     <string name="title_activity_navigation_drawer">NavigationDrawer</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
@@ -25,7 +26,7 @@
     <string name="menu_logout">LogOut</string>
 
 
-    <string name="home_text">Home</string>
+    <string name="home_text">Welcome User....!!</string>
     <string name="account_text">My Account</string>
     <string name="calendet_text">Calender</string>
     <string name="chat_text">Chat</string>
